Add zsh configuration

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -4,6 +4,7 @@ HOME_BIN="$HOME/bin"
 export SVN_EDITOR=vim
 export EDITOR=vim
 
+export LANG=pl_PL.UTF-8
 
 export PATH="$HOME/.jenv/bin:$PATH"
 export PATH="$HOME/.rbenv/bin:$PATH"
