--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,20 +1,51 @@
+# rebind prefix key to C-a
 set -g prefix C-a
 unbind-key C-b
-bind-key C-a send-prefix
+bind C-a send-prefix
 
-#set vi mode
+# shell
+set -g default-command /usr/bin/zsh
+set -g default-shell /usr/bin/zsh
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# set vi mode
 set-option -g status-keys vi
 set-option -g mode-keys vi
 
-#Last saved environment is automatically restored when tmux is started
-set -g @continuum-restore 'on'
+# vim style copy paste mode
+bind-key -t vi-copy 'v' begin-selection
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-#More plugins on https://github.com/tmux-plugins
-#Hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# highlighting the active window
+set-window-option -g window-status-current-bg blue
 
-# Requirements / dependencies: tmux 1.9 or higher, bash
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# key binding for reloading configuration
+bind-key C-r source-file ~/.tmux.conf; display "reloaded!"
+
+# status bar
+set-option -g status-left-length 26
+set-option -g status-left "[#S]:#(whoami)@#H "
+
+# lengthening the history limit
+set-option -g history-limit 10000
+
+# lengthening message display time
+set-option -g display-time 2000
+
+# last saved environment is automatically restored when tmux is started
+#set -g @continuum-restore 'on'
+
+# more plugins on https://github.com/tmux-plugins
+# hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# requirements / dependencies: tmux 1.9 or higher, bash
+# initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
