--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,7 +25,7 @@ bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 set-window-option -g window-status-current-bg blue
 
 # key binding for reloading configuration
-bind-key C-r source-file ~/.tmux.conf; display "reloaded!"
+bind-key C-r source-file ~/.tmux.conf\; display "reloaded!"
 
 # status bar
 set-option -g status-left-length 26
