--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,9 @@ bind C-a send-prefix
 set -g default-command /usr/bin/zsh
 set -g default-shell /usr/bin/zsh
 
+# store more history in the buffer than default
+set-option -g history-limit 10000
+
 # start with window 1 (instead of 0)
 set -g base-index 1
 
@@ -36,6 +39,9 @@ set-option -g history-limit 10000
 
 # lengthening message display time
 set-option -g display-time 2000
+
+# lengthening display time of pane numbers
+set-option -g display-panes-time 3000
 
 # last saved environment is automatically restored when tmux is started
 #set -g @continuum-restore 'on'
