Changing look of tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,15 +24,8 @@ set-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-# highlighting the active window
-set-window-option -g window-status-current-bg blue
-
 # key binding for reloading configuration
 bind-key C-r source-file ~/.tmux.conf\; display "reloaded!"
-
-# status bar
-set-option -g status-left-length 26
-set-option -g status-left "[#S]:#(whoami)@#H "
 
 # lengthening the history limit
 set-option -g history-limit 10000
@@ -42,6 +35,18 @@ set-option -g display-time 2000
 
 # lengthening display time of pane numbers
 set-option -g display-panes-time 3000
+
+# Status Bar
+set-option -g status-interval 1
+set-option -g status-left ''
+set-option -g status-right ' #(whoami)@#H :: %H:%M%p'
+set-window-option -g window-status-current-fg magenta
+set-option -g status-fg default
+
+# Status Bar solarized-dark (default)
+set-option -g status-bg black
+set-option -g pane-active-border-fg yellow
+set-option -g pane-border-fg blue
 
 # last saved environment is automatically restored when tmux is started
 #set -g @continuum-restore 'on'
