Support for scala lang

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -13,4 +13,6 @@ export PATH="$HOME/.pyenv/bin:$PATH"
 
 export SDKMAN_DIR="$HOME/.sdkman"
 
-export PATH="$HOME_BIN/apache-maven/bin:$HOME_BIN/gradle/bin:$HOME_BIN/sbt/bin:$HOME_BIN/apache-ant/bin:$PATH"
+export SCALA_HOME="$HOME_BIN/scala"
+
+export PATH="$SCALA_HOME/bin:$HOME_BIN/apache-maven/bin:$HOME_BIN/gradle/bin:$HOME_BIN/sbt/bin:$HOME_BIN/apache-ant/bin:$PATH"
