Add key binding for toggle on/off synchronization panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,8 +24,12 @@ set-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-# key binding for reloading configuration
+# key bindings
+## for reloading configuration
 bind-key C-r source-file ~/.tmux.conf\; display "reloaded!"
+## for toggle synchronizing panes
+bind-key C-s set-window-option synchronize-panes
+
 
 # lengthening the history limit
 set-option -g history-limit 10000
