--- a/common/.env_variables
+++ b/common/.env_variables
@@ -6,10 +6,10 @@ export EDITOR=vim
 
 export LANG=pl_PL.UTF-8
 
-export PATH="$HOME/.jenv/bin:$PATH"
-export PATH="$HOME/.rbenv/bin:$PATH"
+#export PATH="$HOME/.jenv/bin:$PATH"
+#export PATH="$HOME/.rbenv/bin:$PATH"
 export PATH="$HOME/.nodenv/bin:$PATH"
-export PATH="$HOME/.pyenv/bin:$PATH"
+#export PATH="$HOME/.pyenv/bin:$PATH"
 
 export SDKMAN_DIR="$HOME/.sdkman"
 
