Add solarized skin setup for mc

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -11,6 +11,10 @@ export LANG=pl_PL.UTF-8
 export PATH="$HOME/.nodenv/bin:$PATH"
 #export PATH="$HOME/.pyenv/bin:$PATH"
 
+# Solarized skin for Midnight Commander
+# https://github.com/iwfmp/mc-solarized-skin
+export MC_SKIN=$HOME/.mc/lib/mc-solarized-skin/solarized.ini
+
 export SDKMAN_DIR="$HOME/.sdkman"
 
 export SCALA_HOME="$HOME_BIN/scala"
