Delegate jvm env management to sdkman

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -6,10 +6,7 @@ export EDITOR=vim
 
 export LANG=pl_PL.UTF-8
 
-#export PATH="$HOME/.jenv/bin:$PATH"
-#export PATH="$HOME/.rbenv/bin:$PATH"
 export PATH="$HOME/.nodenv/bin:$PATH"
-#export PATH="$HOME/.pyenv/bin:$PATH"
 
 # Solarized skin for Midnight Commander
 # https://github.com/iwfmp/mc-solarized-skin
@@ -17,6 +14,4 @@ export MC_SKIN=$HOME/.mc/lib/mc-solarized-skin/solarized.ini
 
 export SDKMAN_DIR="$HOME/.sdkman"
 
-export SCALA_HOME="$HOME_BIN/scala"
-
-export PATH="$SCALA_HOME/bin:$HOME_BIN/apache-maven/bin:$HOME_BIN/gradle/bin:$HOME_BIN/sbt/bin:$HOME_BIN/apache-ant/bin:$PATH"
+export PATH="$HOME_BIN:$PATH"
