--- a/common/.env_variables
+++ b/common/.env_variables
@@ -2,7 +2,9 @@ HOME_BIN="$HOME/bin"
 
 #editors
 export SVN_EDITOR=vim
+export SUDO_EDITOR=vim
 export EDITOR=vim
+export VISUAL=view
 
 export LANG=pl_PL.UTF-8
 
