Add xdg folder with mimeapps

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -18,3 +18,5 @@ export MC_SKIN=$HOME/.mc/lib/mc-solarized-skin/solarized.ini
 export SDKMAN_DIR="$HOME/.sdkman"
 
 export PATH="$HOME_BIN:$PATH"
+
+export XDG_CONFIG_HOME="$HOME/.config"
