--- a/i3wm/config
+++ b/i3wm/config
@@ -29,6 +29,17 @@ font pango:monospace 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# starting apps
+
+exec --no-startup-id /usr/bin/urxvtd -q -f -o               # urxvtd
+exec --no-startup-id /usr/bin/clipit                        # clipit
+exec --no-startup-id /usr/bin/dropbox start -i              # dropbox
+exec --no-startup-id /usr/bin/nm-applet --sm-disable        # network manager
+exec --no-startup-id /usr/bin/pasystray                     # volume control
+exec --no-startup-id /usr/bin/blueman-applet                # bluetooth manager
+
+
+
 # start a terminal
 #bindsym $mod+Return exec i4-sensible-terminal
 bindsym $mod+Return exec urxvt
@@ -94,30 +105,42 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# focus last urgent
+bindsym $mod+u [urgent="last"] focus
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
+bindsym $mod+1 workspace 1: main
+bindsym $mod+2 workspace 2: www
+bindsym $mod+3 workspace 3: console
+bindsym $mod+4 workspace 4: ide-1
+bindsym $mod+5 workspace 5: ide-2
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 bindsym $mod+Escape workspace back_and_forth
+bindsym $mod+Control+Left workspace prev
+bindsym $mod+Control+Right workspace next
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+1 move container to workspace 1: main
+bindsym $mod+Shift+2 move container to workspace 2: www
+bindsym $mod+Shift+3 move container to workspace 3: console
+bindsym $mod+Shift+4 move container to workspace 4: ide-1
+bindsym $mod+Shift+5 move container to workspace 5: ide-2
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+# output management
+# move the current workspace to the next output
+bindsym $mod+o move workspace to output right
+# put this window on the primary output.
+# to configure primary do: xrandr --output <output> --primary
+bindsym $mod+p move container to output primary
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -151,6 +174,9 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+# workspace settings
+
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
