--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -49,7 +49,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
-bindsym $mod+Control+l exec --no-startup-id ~/.config/i3/i3exit lock
+bindsym $mod+Control+l exec --no-startup-id ~/.config/i3scripts/i3exit lock
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -178,12 +178,12 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 mode "mode_system" {
-    bindsym l exec --no-startup-id ~/.config/i3/i3exit lock, mode "default"
-    bindsym e exec --no-startup-id ~/.config/i3/i3exit logout, mode "default"
-    bindsym s exec --no-startup-id  ~/.config/i3/i3exit suspend, mode "default"
-    bindsym h exec --no-startup-id ~/.config/i3/i3exit hibernate, mode "default"
-    bindsym r exec --no-startup-id ~/.config/i3/i3exit  reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id ~/.config/i3/i3exit shutdown, mode "default"
+    bindsym l exec --no-startup-id ~/.config/i3scripts/i3exit lock, mode "default"
+    bindsym e exec --no-startup-id ~/.config/i3scripts/i3exit logout, mode "default"
+    bindsym s exec --no-startup-id  ~/.config/i3scripts/i3exit suspend, mode "default"
+    bindsym h exec --no-startup-id ~/.config/i3scripts/i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id ~/.config/i3scripts/i3exit  reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id ~/.config/i3scripts/i3exit shutdown, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
