--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -177,7 +177,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-mode "mode_system" {
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+
+mode "$mode_system" {
     bindsym l exec --no-startup-id ~/.config/i3scripts/i3exit lock, mode "default"
     bindsym e exec --no-startup-id ~/.config/i3scripts/i3exit logout, mode "default"
     bindsym s exec --no-startup-id  ~/.config/i3scripts/i3exit suspend, mode "default"
@@ -190,7 +192,7 @@ mode "mode_system" {
     bindsym Escape mode "default"
 }
 
-bindsym $mod+BackSpace mode "mode_system"
+bindsym $mod+BackSpace mode "$mode_system"
 
 # workspace settings
 
