--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -110,12 +110,19 @@ bindsym $mod+a focus parent
 # focus last urgent
 bindsym $mod+u [urgent="last"] focus
 
+
+set $ws1 1: main
+set $ws2 2: www
+set $ws3 3: term
+set $ws4 4: ide-1
+set $ws5 5: ide-2
+
 # switch to workspace
-bindsym $mod+1 workspace 1: main
-bindsym $mod+2 workspace 2: www
-bindsym $mod+3 workspace 3: console
-bindsym $mod+4 workspace 4: ide-1
-bindsym $mod+5 workspace 5: ide-2
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -126,11 +133,11 @@ bindsym $mod+Control+Left workspace prev
 bindsym $mod+Control+Right workspace next
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1: main
-bindsym $mod+Shift+2 move container to workspace 2: www
-bindsym $mod+Shift+3 move container to workspace 3: console
-bindsym $mod+Shift+4 move container to workspace 4: ide-1
-bindsym $mod+Shift+5 move container to workspace 5: ide-2
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
