--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -202,11 +202,20 @@ mode "$mode_system" {
 bindsym $mod+BackSpace mode "$mode_system"
 
 # workspace settings
-
+for_window [class="google-chrome"] move container to workspace $ws2
+for_window [class="Firefox"] move container to workspace $ws2
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
+#        status_command exec ~/.config/i3scripts/net-speed.sh
         tray_output primary
 }
+
+# Toggle between hide state and show state
+bindsym $mod+b bar mode toggle
+
+# scratchpad
+bindsym $mod+m move scratchpad
+bindsym $mod+grave scratchpad show
