--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -201,9 +201,14 @@ mode "$mode_system" {
 
 bindsym $mod+BackSpace mode "$mode_system"
 
-# workspace settings
-for_window [class="google-chrome"] move container to workspace $ws2
-for_window [class="Firefox"] move container to workspace $ws2
+# workspace assignment
+assign [class="^Google-chrome$"] $ws2
+assign [class="^Firefox$"] $ws2
+
+# custom window settings
+# for_window [class="^URxvt$" instance="scratchpad"] border 1pixel; move scratchpad
+for_window [class="^Google-chrome$"] border none
+for_window [class="^Firefox$"] border none
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -219,3 +224,5 @@ bindsym $mod+b bar mode toggle
 # scratchpad
 bindsym $mod+m move scratchpad
 bindsym $mod+grave scratchpad show
+
+
