--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -30,13 +30,15 @@ font pango:monospace 8
 floating_modifier $mod
 
 # starting apps
-
+exec --no-startup-id /usr/bin/feh --bg-scale ~/Dropbox/wallpapers/system-hierarchy.png  # setting wallpaper
 exec --no-startup-id /usr/bin/urxvtd -q -f -o               # urxvtd
 exec --no-startup-id /usr/bin/clipit                        # clipit
 exec --no-startup-id /usr/bin/dropbox start -i              # dropbox
 exec --no-startup-id /usr/bin/nm-applet --sm-disable        # network manager
 exec --no-startup-id /usr/bin/pasystray                     # volume control
 exec --no-startup-id /usr/bin/blueman-applet                # bluetooth manager
+exec urxvt -name scratchpad
+exec urxvt -name mcabber  -c "mcabber"
 
 
 
@@ -116,6 +118,7 @@ set $ws2 2: www
 set $ws3 3: term
 set $ws4 4: ide-1
 set $ws5 5: ide-2
+set $ws8 8: mcabber
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -125,7 +128,7 @@ bindsym $mod+4 workspace $ws4
 bindsym $mod+5 workspace $ws5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+8 workspace $ws8 
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 bindsym $mod+Escape workspace back_and_forth
@@ -140,7 +143,7 @@ bindsym $mod+Shift+4 move container to workspace $ws4
 bindsym $mod+Shift+5 move container to workspace $ws5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
@@ -204,9 +207,10 @@ bindsym $mod+BackSpace mode "$mode_system"
 # workspace assignment
 assign [class="^Google-chrome$"] $ws2
 assign [class="^Firefox$"] $ws2
+assign [class="^URxvt$" instance="^mcabber$"] $ws8
 
 # custom window settings
-# for_window [class="^URxvt$" instance="scratchpad"] border 1pixel; move scratchpad
+for_window [class="^URxvt$" instance="scratchpad"] border 1pixel; move scratchpad
 for_window [class="^Google-chrome$"] border none
 for_window [class="^Firefox$"] border none
 
