--- a/common/.env_variables
+++ b/common/.env_variables
@@ -9,7 +9,7 @@ export PAGER=less
 
 export LANG=pl_PL.UTF-8
 
-export PATH="$HOME/.nodenv/bin:$PATH"
+export PATH="$HOME/.local/bin:$HOME/.nodenv/bin:$PATH"
 
 # Solarized skin for Midnight Commander
 # https://github.com/iwfmp/mc-solarized-skin
@@ -20,3 +20,5 @@ export SDKMAN_DIR="$HOME/.sdkman"
 export PATH="$HOME_BIN:$PATH"
 
 export XDG_CONFIG_HOME="$HOME/.config"
+
+
