--- a/common/.env_variables
+++ b/common/.env_variables
@@ -9,7 +9,7 @@ export PAGER=less
 
 export LANG=pl_PL.UTF-8
 
-export PATH="$HOME/.local/bin:$HOME/.nodenv/bin:$PATH"
+export PATH="$HOME/.local/bin:$HOME/.nodenv/bin:$HOME/.jenv/bin:$PATH"
 
 # Solarized skin for Midnight Commander
 # https://github.com/iwfmp/mc-solarized-skin
