--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,9 @@ set-option -g history-limit 10000
 # start with window 1 (instead of 0)
 set -g base-index 1
 
+# don't rename windows automatically
+set-option -g allow-rename off
+
 # start with pane 1
 set -g pane-base-index 1
 
@@ -45,12 +48,12 @@ set-option -g display-panes-time 3000
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right ' #(whoami)@#H :: %H:%M%p'
-set-window-option -g window-status-current-fg magenta
+set-window-option -g window-status-current-fg green
 set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
 set-option -g status-bg black
-set-option -g pane-active-border-fg yellow
+set-option -g pane-active-border-fg green
 set-option -g pane-border-fg blue
 
 # last saved environment is automatically restored when tmux is started
@@ -60,8 +63,9 @@ set-option -g pane-border-fg blue
 # hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # requirements / dependencies: tmux 1.9 or higher, bash
 # initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-#run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
