--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,6 +56,8 @@ set-option -g status-bg black
 set-option -g pane-active-border-fg green
 set-option -g pane-border-fg blue
 
+set -g @sidebar-tree-command 'tree -C'
+
 # last saved environment is automatically restored when tmux is started
 #set -g @continuum-restore 'on'
 
@@ -64,6 +66,7 @@ set-option -g pane-border-fg blue
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # requirements / dependencies: tmux 1.9 or higher, bash
 # initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
