Conversion to the new tmux config for vi mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,8 +25,8 @@ set-option -g status-keys vi
 set-option -g mode-keys vi
 
 # vim style copy paste mode
-bind-key -t vi-copy 'v' begin-selection
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # key bindings
 ## for reloading configuration
