--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,8 +25,15 @@ set-option -g status-keys vi
 set-option -g mode-keys vi
 
 # vim style copy paste mode
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# https://shapeshed.com/custom-vim-bindings-in-tmux-2-4/
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+"bind-key -t vi-copy 'v' begin-selection; \
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
+
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+"bind-key -T copy-mode-vi v send-keys -X begin-selection; \
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
 
 # key bindings
 ## for reloading configuration
