--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,10 +29,14 @@ set-option -g mode-keys vi
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
 "bind-key -t vi-copy 'v' begin-selection; \
+bind-key -t vi-copy V select-line; \
+bind-key -t vi-copy r rectangle-toggle; \
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
 
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 "bind-key -T copy-mode-vi v send-keys -X begin-selection; \
+bind-key -T copy-mode-vi 'V' send -X select-line; \
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
 
 # key bindings
