more nice feature form tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,8 @@ set-option -g mode-keys vi
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
 "bind-key -t vi-copy 'v' begin-selection; \
+bind-key Escape copy-mode; \
+bind-key -t vi-copy Escape cancel; \
 bind-key -t vi-copy V select-line; \
 bind-key -t vi-copy r rectangle-toggle; \
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
@@ -45,6 +47,18 @@ bind-key C-r source-file ~/.tmux.conf\; display "reloaded!"
 ## for toggle synchronizing panes
 bind-key C-s set-window-option synchronize-panes
 
+# use "v" and "s" to do vertical/horizontal splits, like vim
+bind s split-window -v
+bind v split-window -h
+
+# use the vim motion keys to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# capture pane and parse are url from buffer
+bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 # lengthening the history limit
 set-option -g history-limit 10000
