switch off pager in git

--- a/git/work/.gitconfig
+++ b/git/work/.gitconfig
@@ -127,3 +127,5 @@
 #https://raw.githubusercontent.com/jakubnabrdalik/gitkurwa/master/config
 [credential]
 	helper = cache
+[pager]
+	branch = false
