--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# Set <ESC> delay to 0
+set -s escape-time 0
+
 set -g default-terminal "screen-256color"
 # rebind prefix key to C-a
 set -g prefix C-a
