--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,3 @@
-# Set <ESC> delay to 0
-set -s escape-time 0
-
-set -g default-terminal "screen-256color"
 # rebind prefix key to C-a
 set -g prefix C-a
 unbind-key C-b
@@ -10,9 +6,6 @@ bind C-a send-prefix
 # shell
 set -g default-command /usr/bin/zsh
 set -g default-shell /usr/bin/zsh
-
-# store more history in the buffer than default
-set-option -g history-limit 10000
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -23,51 +16,13 @@ set-option -g allow-rename off
 # start with pane 1
 set -g pane-base-index 1
 
-# set vi mode
-set-option -g status-keys vi
-set-option -g mode-keys vi
-
-# vim style copy paste mode
-# https://shapeshed.com/custom-vim-bindings-in-tmux-2-4/
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
-"bind-key -t vi-copy 'v' begin-selection; \
-bind-key Escape copy-mode; \
-bind-key -t vi-copy Escape cancel; \
-bind-key -t vi-copy V select-line; \
-bind-key -t vi-copy r rectangle-toggle; \
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
-
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-"bind-key -T copy-mode-vi v send-keys -X begin-selection; \
-bind-key -T copy-mode-vi 'V' send -X select-line; \
-bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
-
 # key bindings
-## for reloading configuration
-bind-key C-r source-file ~/.tmux.conf\; display "reloaded!"
+
 ## for toggle synchronizing panes
 bind-key C-s set-window-option synchronize-panes
 
-# use "v" and "s" to do vertical/horizontal splits, like vim
-bind s split-window -v
-bind v split-window -h
-
-# use the vim motion keys to move between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 # capture pane and parse are url from buffer
-bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
-
-# lengthening the history limit
-set-option -g history-limit 10000
-
-# lengthening message display time
-set-option -g display-time 2000
+bind-key ` capture-pane \; save-buffer /tmp/tmux-buffer\; display "paned saved to /tmp/tmux-buffer"
 
 # lengthening display time of pane numbers
 set-option -g display-panes-time 3000
@@ -86,15 +41,17 @@ set-option -g pane-border-fg blue
 
 set -g @sidebar-tree-command 'tree -C'
 
-# last saved environment is automatically restored when tmux is started
-#set -g @continuum-restore 'on'
-
 # more plugins on https://github.com/tmux-plugins
 # hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'jbnicolai/tmux-fpp'
 
 # requirements / dependencies: tmux 1.9 or higher, bash
 # initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
