--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,8 @@ set-option -g allow-rename off
 # start with pane 1
 set -g pane-base-index 1
 
+set -g mode-keys emacs
+
 # key bindings
 
 ## for toggle synchronizing panes
