more or less zsh config

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -1,6 +1,3 @@
-HOME_BIN="$HOME/bin"
-
-#editors
 export SVN_EDITOR=vim
 export SUDO_EDITOR=vim
 export EDITOR=vim
@@ -9,7 +6,7 @@ export PAGER=less
 
 export LANG=pl_PL.UTF-8
 
-export PATH="$HOME/.local/bin:$HOME/.nodenv/bin:$HOME/.jenv/bin:$PATH"
+export PATH="$HOME/bin:$HOME/.local/bin:$PATH"
 
 # Solarized skin for Midnight Commander
 # https://github.com/iwfmp/mc-solarized-skin
@@ -17,8 +14,4 @@ export MC_SKIN=$HOME/.mc/lib/mc-solarized-skin/solarized.ini
 
 export SDKMAN_DIR="$HOME/.sdkman"
 
-export PATH="$HOME_BIN:$PATH"
-
 export XDG_CONFIG_HOME="$HOME/.config"
-
-
