moving jenv plugin to external repository

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "zsh/.oh-my-zsh-custom/plugins/zsh-autosuggestions"]
 	path = zsh/.oh-my-zsh-custom/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "zsh/.oh-my-zsh-custom/plugins/jenv"]
+	path = zsh/.oh-my-zsh-custom/plugins/jenv
+	url = https://github.com/ssledz/zsh-jenv
