setting lua env by luarocks

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -15,3 +15,7 @@ export MC_SKIN=$HOME/.mc/lib/mc-solarized-skin/solarized.ini
 export SDKMAN_DIR="$HOME/.sdkman"
 
 export XDG_CONFIG_HOME="$HOME/.config"
+
+if [ $(command -v luarocks) ]; then
+  eval $(luarocks path --bin)     # exporting lua path, lua cpath and so on
+fi
