--- a/git/work/.gitconfig
+++ b/git/work/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  email = slawomir.sledz@cortb.pl
+  email = slawomir.sledz@iiit.pl
   name = Sławomir Śledź
 [branch]
   autosetupmerge = true
