bootstrapping of ssh-agent

--- a/common/.env_variables
+++ b/common/.env_variables
@@ -19,3 +19,10 @@ export XDG_CONFIG_HOME="$HOME/.config"
 if [ $(command -v luarocks) ]; then
   eval $(luarocks path --bin)     # exporting lua path, lua cpath and so on
 fi
+
+
+if [ ! -S ~/.ssh/ssh_auth_sock ]; then
+  eval `ssh-agent` > /dev/null
+  ln -sf "$SSH_AUTH_SOCK" ~/.ssh/ssh_auth_sock
+fi
+export SSH_AUTH_SOCK=~/.ssh/ssh_auth_sock
