--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,20 +35,20 @@ set-option -g status-left ''
 set-option -g status-right ' #(whoami)@#H :: %H:%M%p'
 
 set -g @sidebar-tree-command 'tree -C'
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
 
 # Status Bar solarized-dark (default)
-set-option -g status-style bg=black
 set-option -g pane-active-border-style fg=green
 set-option -g pane-border-style fg=blue
 set-window-option -g window-status-current-style fg=red
-set-option -g status-style fg=default
+set-option -g status-style fg=default,bg=black
 
 # more plugins on https://github.com/tmux-plugins
 # hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
