--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ unbind-key C-b
 bind C-a send-prefix
 
 # shell
-set -g default-command /usr/bin/zsh
-set -g default-shell /usr/bin/zsh
+set -g default-command /usr/local/bin/zsh 
+set -g default-shell /usr/local/bin/zsh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -33,15 +33,13 @@ set-option -g display-panes-time 3000
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right ' #(whoami)@#H :: %H:%M%p'
-set-window-option -g window-status-current-fg green
-set-option -g status-fg default
-
-# Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg green
-set-option -g pane-border-fg blue
 
 set -g @sidebar-tree-command 'tree -C'
+
+set-option -g pane-active-border-style fg=green
+set-option -g pane-border-style fg=blue
+set-window-option -g window-status-current-style fg=red
+set-option -g status-style fg=default,bg=black
 
 # more plugins on https://github.com/tmux-plugins
 # hit prefix + I to fetch the plugin and source it. The plugin will automatically start "working" in the background, no action required.
