some changes for mac setup

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = slawomir.sledz@iqivia.com
+	email = slawomir.sledz@iqvia.com
 	name = Sławomir Śledź
 [branch]
     autosetupmerge = true
