--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,13 +33,13 @@ set-option -g display-panes-time 3000
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right ' #(whoami)@#H :: %H:%M%p'
-set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-style fg=green
 set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg green
-set-option -g pane-border-fg blue
+set-option -g status-style bg=black
+set-option -g pane-active-border-style fg=green
+set-option -g pane-border-style fg=blue
 
 set -g @sidebar-tree-command 'tree -C'
 
