--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ unbind-key C-b
 bind C-a send-prefix
 
 # shell
-set -g default-command /usr/local/bin/zsh 
-set -g default-shell /usr/local/bin/zsh
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
