--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,12 +1,12 @@
 [user]
-	email = slawomir.sledz@iqvia.com
-	name = Sławomir Śledź
+    email = slawomir.sledz@gmail.com
+    name = Sławomir Śledź
 [branch]
     autosetupmerge = true
 [push]
     default = tracking
 [color]
-	ui = auto
+    ui = auto
 [color "branch"]
     current = yellow reverse
     local = yellow
@@ -39,7 +39,7 @@
     anychangesonmaster = !sh -c 'git fetch' && git log --oneline HEAD..origin/master
     whoischanging = !sh -c 'git shortlog HEAD..origin/$0'
     whoischangingmaster = !sh -c 'git shortlog HEAD..origin/master'
-    
+
     #what branches you have on origin, with info on who is guilty and how long ago. Useful for gitflow and feature branches in general. Requires fetch up-front.
     showorigin = "!sh -c 'for branch in `git branch -r | grep -v HEAD`;do echo `git show -s --format=\"%Cred%ci %C(green)%h %C(yellow)%cr %C(magenta)%an %C(blue)\" $branch | head -n 1` \\\t$branch; done | sort -r'"
 
@@ -74,7 +74,7 @@
 
     #fiat lux
     makegitrepo = !git init && git add . && git commit -m \"initial commit\"
-    
+
     #Finds a filename in the git repository. Gives absolute location (from the git root).
     find = !sh -c 'git ls-tree -r --name-only HEAD | grep --color $1' - 
 
@@ -92,7 +92,7 @@
 
     # for git-root command
     proot = !pwd
-    
+
     #Jira tickets (from: http://blogs.atlassian.com/2014/08/whats-new-git-2-1/)
     issues = "!f() { : git log ; echo 'Printing issue keys'; git log --oneline $@ | egrep -o [A-Z]+-[0-9]+ | sort | uniq; }; f"
     #version for git below 2.1
@@ -110,12 +110,12 @@
 [core]
     pager = less -r
     editor = vim
-	autocrlf = input
-	abbrev = 8
+    autocrlf = input
+    abbrev = 8
 [help]
     autocorrect = 1 #fucking magic!
 [diff]
-	tool = meld
+    tool = meld
 
 
 
@@ -127,6 +127,8 @@
 #https://gist.github.com/robmiller/6018582 (branch-name, publish, unpublish)
 #https://raw.githubusercontent.com/jakubnabrdalik/gitkurwa/master/config
 [credential]
-	helper = cache
+    helper = cache
 [log]
-	abbrevCommit = yes
+    abbrevCommit = yes
+[pager]
+    branch = false
