--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,9 @@ bind C-a send-prefix
 set -g default-command /usr/bin/zsh
 set -g default-shell /usr/bin/zsh
 
+set -g xterm-keys on
+set -g default-terminal "xterm-256color"
+
 # start with window 1 (instead of 0)
 set -g base-index 1
 
